# rAIn

./: .gitattributes  .gitignore  README.md  all  all.cmd  all.ps1  argos  argos.cmd  argos.ps1  build  build.cmd  build.ps1  classify  classify.cmd  classify.ps1  clf  clf.cmd  clf.ps1  d.cmd  d.ps1  detect  detect.cmd  geojson.cmd  geojson.ps1  gj  gj.cmd  heatmap.cmd  heatmap.ps1  hm  hm.ps1  img.b64  livevideo  livevideo.cmd  livevideo.ps1  lv  lv.cmd  lv.ps1  mypy.ini  obb  obb.cmd  (+16 more)
.github/workflows/: _project-template.yml  argos-ci.yaml  argos.yml  ci.yml  drone-vision.yml
docs/: observability.md
installers/: all  all.cmd  all.ps1  argos  argos.cmd  argos.ps1  build  build.cmd  build.ps1  classify  classify.cmd  classify.ps1  d  d.ps1  detect  detect.cmd  geojson  geojson.cmd  geojson.cmd.disabled  geojson.ps1  gj  gj.ps1  heatmap  heatmap.ps1  hm  hm.cmd  hm.cmd.disabled  hm.ps1  livevideo  livevideo.cmd  livevideo.ps1  lv.cmd  lv.ps1  obb.cmd  obb.ps1  object  pack  pack.cmd  pack.ps1  pose.cmd  (+8 more)
installers/lib/: progress.psm1
projects/argos/: .deploy-trigger  .devcontainer  .dockerignore  .gitignore  Makefile  README.md  argos  argos.cmd  argos.ps1  bootstrap.py  build  build.cmd  build.ps1  cdk.json  constraints.txt  lambda_function.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run  run.cmd  run.ps1
projects/argos/cdk/: app.py  argos_stack.py
projects/argos/lambda/: .gitignore  Dockerfile  __init__.py  app.py  geo_sink.py  heatmap.py  requirements.txt
projects/argos/panoptes/: __init__.py  __main__.py  classify.py  cli.py  diagnostics.py  env_audit.py  ffmpeg_utils.py  geo_sink.py  heatmap.py  lambda_like.py  logging_config.py  model_registry.py  obb.py  obb_types.py  pose.py  predict_classify_mp4.py  predict_heatmap_mp4.py  predict_mp4.py  predict_obb_mp4.py  predict_pose_mp4.py  smoothing.py  support_bundle.py
projects/argos/panoptes/live/: __init__.py  _types.py  backend_controller.py  camera.py  cli.py  config.py  overlay.py  pipeline.py  preprocess.py  sinks.py  tasks.py
projects/argos/panoptes/model/: _export_onnx.py  _fetch_models.py  _fetch_v12.py  artifact_metadata.py  manifest.json  yolo11n-seg.onnx  yolo11n.onnx  yolo11s-seg.onnx  yolo11s.onnx  yolo11x-seg.onnx  yolo11x.onnx  yolov12n.onnx  yolov12s-seg.onnx  yolov12x.onnx  yolov8n-seg.onnx  yolov8n.onnx  yolov8s.onnx  yolov8x-seg.onnx  yolov8x.onnx
projects/argos/panoptes/progress/: __init__.py  __main__.py  bridges.py  demo.py  engine.py  progress_ux.py
projects/argos/panoptes/progress/integrations/: __init__.py  download_progress.py  fileio_progress.py  pip_progress.py  subprocess_progress.py
projects/argos/panoptes/runtime/: __init__.py  backend_probe.py  onnx_spec.py  resilient_yolo.py  venv_bootstrap.py
projects/argos/panoptes/tools/: __init__.py  build_models.py
projects/argos/tests/: ARGOS OPTIMIZATION RESEARCH  ARGOTS GPT OPTIMIZATION RESEARCH  Code Update Plan For Argos  GitHub Actions Python Tests  Training Research
projects/argos/tests/raw/: mildrone.avif
projects/argos/tests/results/: GoldenGateBridge-001.geojson  Statue_of_Liberty_7.geojson  Sydney_Opera_House_Sails.geojson
projects/argos/tests/unit-tests/: conftest.py  test_avif_and_video.py  test_backend_selection.py  test_cli_format_preservation.py  test_cli_tasks_new_images.py  test_cli_tasks_new_videos.py  test_geojson.py  test_heatmap.py  test_heatmap_jpg_mp4.py  test_live.py  test_live_pipeline.py  test_loader_cls_pose_obb.py  test_model_registry_fallback.py  test_resilient_yolo.py  test_segmenter_loader.py  test_tasks.py
projects/drone-vision/: .devcontainer  .gitattributes  .gitignore  Makefile  README.md  lambda_function.py  pyproject.toml  pyrightconfig.json  requirements.txt
projects/drone-vision/cdk/: app.py  drone_stack.py  requirements.txt
projects/drone-vision/cdk.out/: DroneVisionStack.assets.json  DroneVisionStack.template.json  manifest.json  tree.json
projects/drone-vision/cdk.out/asset.a7e50f50ac7f130f5dc7189773bddb93e47ab3fd7489057daa334840623dcf4e/: Dockerfile  app.py  geo_sink.py  heatmap.py  requirements.txt
projects/drone-vision/dronevision/: __init__.py  __main__.py  cli.py  geo_sink.py  heatmap.py  lambda_like.py  predict_heatmap_mp4.py  predict_mp4.py  run_all_tests.py
projects/drone-vision/lambda/: .dockerignore  Dockerfile  __init__.py  app.py  geo_sink.py  heatmap.py  requirements.txt
projects/drone-vision/lambda/model/: airplane.onnx  drone.onnx  yolov8n.onnx
projects/drone-vision/model/: yolov12l-cls.pt  yolov12l-seg.pt  yolov12l.onnx  yolov12m-cls.pt  yolov12m-seg.pt  yolov12m.onnx  yolov12n-cls.pt  yolov12n-seg.pt  yolov12n.onnx  yolov12s-cls.pt  yolov12s-seg.pt  yolov12s.onnx  yolov12x-cls.pt  yolov12x.onnx  yolov8n.onnx
projects/drone-vision/tests/: conftest.py  howtotest.txt  test_geojson.py  test_tasks.py
projects/drone-vision/tests/results/: GoldenGateBridge-001.geojson  Statue_of_Liberty_7.geojson  Sydney_Opera_House_Sails.geojson  apache_points.geojson  bluecar.geojson  boeing_747.geojson  bus.geojson  fuji_points.geojson  london_bus_points.geojson  midtown_points.geojson  niagara_points.geojson  shibuya_points.geojson  whereischair.geojson  zidane_points.geojson
projects/drone-vision/tests/unit-tests/: conftest.py  geojson_test.ps1  test_avif_and_video.py  test_cli_format_preservation.py  test_geojson.py  test_heatmap.py  test_heatmap_jpg_mp4.py  test_tasks.py
