[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name            = "dronevision"
version         = "0.1.0"
description     = "One-step JPEG / video inference for small-object detection."
authors         = [{ name = "YOUR NAME", email = "you@example.com" }]
readme          = "README.md"
requires-python = ">=3.9"

# ───────────────────────── runtime ─────────────────────────
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "ultralytics>=8.0",
  # wheels for 3.12 start at 1.22
  "onnxruntime>=1.22,<1.24",
  # OpenCV 4.12 → NumPy ≥ 2.3, so pin < 4.12
  "opencv-python-headless>=4.10,<4.12",
  "numpy<2",
  "pillow>=11.3",
  # CLI
  "typer[all]>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "pre-commit",
  # ─ tests / local‑stack ─
  "boto3",
  "moto[all] ~= 4.2",
]

[project.scripts]
target = "dronevision.cli:main"     # installs the `target` shell command

[tool.hatch.build]
include = [
  "dronevision/**/*.py",
  "dronevision/model/*.onnx",
  "dronevision/assets/*",
]

[tool.pytest.ini_options]
addopts   = "-q"
testpaths = ["tests"]
